# llm-sidekick.nvim

./: .busted  .gitignore  .llmsidekick.lua  .luacheckrc  .windsurfrules  Makefile  README.md  foo.txt  llm-sidekick.nvim-scm-1.rockspec  plan.md  spec.md  test_chat_scenario1.md  test_chat_scenario2.md  test_chat_scenario3a.md  test_chat_scenario3b.md  todo.md
doc/: llm-sidekick.txt
docs/: AUTO_COMMIT.md
lua/llm-sidekick/: anthropic.lua  bedrock.lua  bedrock_tool_use.lua  chat.lua  curl.lua  diagnostic.lua  executables.lua  file_editor.lua  filetypes.lua  fs.lua  gemini.lua  git.lua  http.lua  init.lua  litellm.lua  markdown.lua  message_types.lua  models.lua  openai.lua  prompts.lua  prompts_v2.lua  settings.lua  signs.lua  sjson.lua  speech_to_text.lua  spinner.lua  tools.lua  utils.lua
lua/llm-sidekick/spec/: file_editor_spec.lua  init_spec.lua  sjson_spec.lua
lua/llm-sidekick/tools/: create_file.lua  delegate_task.lua  delete_file.lua  gemini.lua  init.lua  openai.lua  replace_in_file.lua  tool_calls.lua  utils.lua
lua/llm-sidekick/tools/communication/: init.lua  send_message_to_user.lua
lua/llm-sidekick/tools/file_operations/: create_or_replace_file.lua  delete_file.lua  edit_file_section.lua  init.lua  list_directory_contents.lua  read_files.lua  replace_in_file.lua  (+6 more)
plugin/: llm-sidekick.lua
python/: 1.py  bedrock.py  litellm_config.yaml  pyproject.toml  sample.rb  test_chunking.py
python/auto_context/: __init__.py  code_chunker.py  code_indexer.py  file_discovery.py  indexer.py  indexer_cli.py  search_cli.py  utils.py
scripts/: minimal_init.vim
(+11 files in other folders)
