[project]
name = "auto_context"
version = "0.1.0"
description = "Semantic code search and understanding for Neovim"
requires-python = ">=3.12"
authors = [
    {name = "Anton Kuzmenko"}
]
dependencies = [
    "pymilvus>=2.5.4",
    "transformers>=4.49.0",
    "python-dotenv>=1.0.1",
    "watchdog>=4.0.0",
    "torch>=2.2.1",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"
